have it working for one date and need to get it working for any date

--- a/views/index.html
+++ b/views/index.html
@@ -12,15 +12,15 @@
     <h1>Timestamp Microservice</h1>
     <hr />
     <div class="container">
-      <h3>Example Usage:</h3>
+      <h3>Usage:</h3>
       <ul>
-        <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
-        <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
+        <li><a href="api/1993-06-20">[project url]/api/1993-06-20</a></li>
+        <li><a href="api/740548800000">[project url]/api/740548800000</a></li>
       </ul>
 
-      <h3>Example Output:</h3>
+      <h3>Output:</h3>
       <p>
-        <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+        <code>{"unix":740602800000, "utc":"Sun, 20 Jun 1993 00:00:00 GMT"}</code>
       </p>
     </div>
     <div class="footer">
